// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`should succeed when command passes on first attempt 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "command": "bun test",
      "pipe": true,
      "shell": true,
    },
    "tool": "executeCommand",
    "type": "tool",
  },
}
`;

exports[`should succeed when command passes on first attempt 2`] = `
{
  "output": {
    "success": true,
  },
  "status": "completed",
}
`;

exports[`should prompt for command when not provided 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "default": "bun typecheck && bun test -u",
      "message": "Please enter the command to run to identify issues:",
    },
    "tool": "input",
    "type": "tool",
  },
}
`;

exports[`should prompt for command when not provided 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "command": "bun typecheck && bun test",
      "pipe": true,
      "shell": true,
    },
    "tool": "executeCommand",
    "type": "tool",
  },
}
`;

exports[`should prompt for command when not provided 3`] = `
{
  "output": {
    "success": true,
  },
  "status": "completed",
}
`;

exports[`should use check command as default when only check available 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "default": "bun typecheck && bun test -u",
      "message": "Please enter the command to run to identify issues:",
    },
    "tool": "input",
    "type": "tool",
  },
}
`;

exports[`should use check command as default when only check available 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "command": "bun typecheck",
      "pipe": true,
      "shell": true,
    },
    "tool": "executeCommand",
    "type": "tool",
  },
}
`;

exports[`should use check command as default when only check available 3`] = `
{
  "output": {
    "success": true,
  },
  "status": "completed",
}
`;

exports[`should use test command as default when only test available 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "default": "bun typecheck && bun test -u",
      "message": "Please enter the command to run to identify issues:",
    },
    "tool": "input",
    "type": "tool",
  },
}
`;

exports[`should use test command as default when only test available 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "command": "bun test",
      "pipe": true,
      "shell": true,
    },
    "tool": "executeCommand",
    "type": "tool",
  },
}
`;

exports[`should use test command as default when only test available 3`] = `
{
  "output": {
    "success": true,
  },
  "status": "completed",
}
`;

exports[`should combine check and test commands when both available 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "default": "bun typecheck && bun test -u",
      "message": "Please enter the command to run to identify issues:",
    },
    "tool": "input",
    "type": "tool",
  },
}
`;

exports[`should combine check and test commands when both available 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "command": "eslint . && jest",
      "pipe": true,
      "shell": true,
    },
    "tool": "executeCommand",
    "type": "tool",
  },
}
`;

exports[`should combine check and test commands when both available 3`] = `
{
  "output": {
    "success": true,
  },
  "status": "completed",
}
`;

exports[`should handle object-style script config 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "default": "bun typecheck && bun test -u",
      "message": "Please enter the command to run to identify issues:",
    },
    "tool": "input",
    "type": "tool",
  },
}
`;

exports[`should handle object-style script config 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "command": "tsc --noEmit && vitest",
      "pipe": true,
      "shell": true,
    },
    "tool": "executeCommand",
    "type": "tool",
  },
}
`;

exports[`should handle object-style script config 3`] = `
{
  "output": {
    "success": true,
  },
  "status": "completed",
}
`;

exports[`should handle no default command 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "default": "bun typecheck && bun test -u",
      "message": "Please enter the command to run to identify issues:",
    },
    "tool": "input",
    "type": "tool",
  },
}
`;

exports[`should handle no default command 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "command": "npm run build",
      "pipe": true,
      "shell": true,
    },
    "tool": "executeCommand",
    "type": "tool",
  },
}
`;

exports[`should handle no default command 3`] = `
{
  "output": {
    "success": true,
  },
  "status": "completed",
}
`;

exports[`should throw error when no command provided and user provides empty input 1`] = `
{
  "error": "No command provided. Aborting.",
  "status": "failed",
}
`;

exports[`should handle config with undefined scripts 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "default": "bun typecheck && bun test -u",
      "message": "Please enter the command to run to identify issues:",
    },
    "tool": "input",
    "type": "tool",
  },
}
`;

exports[`should handle config with undefined scripts 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "command": "custom-command",
      "pipe": true,
      "shell": true,
    },
    "tool": "executeCommand",
    "type": "tool",
  },
}
`;

exports[`should handle config with undefined scripts 3`] = `
{
  "output": {
    "success": true,
  },
  "status": "completed",
}
`;

exports[`should handle mixed script formats 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "default": "bun typecheck && bun test -u",
      "message": "Please enter the command to run to identify issues:",
    },
    "tool": "input",
    "type": "tool",
  },
}
`;

exports[`should handle mixed script formats 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "command": "eslint . && jest --coverage",
      "pipe": true,
      "shell": true,
    },
    "tool": "executeCommand",
    "type": "tool",
  },
}
`;

exports[`should handle mixed script formats 3`] = `
{
  "output": {
    "success": true,
  },
  "status": "completed",
}
`;
